makko/media/jellyseer/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: jellyseer
  labels:
    app: jellyseer
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: jellyseer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyseer
    spec:
      containers:
      - image: fallenbagel/jellyseerr:2.7.3
        name: jellyseer
        volumeMounts:
        - name: config
          mountPath: /app/config
        ports:
        - containerPort: 5055
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 10m
            memory: 128Mi
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyseer-config
          readOnly: false
