makko/media/jellyseer/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseer
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "request.senk0.com"
  rules:
    - backendRefs:
        - name: jellyseer
          port: 5055
